<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:text="@string/main_help_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_darkest"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:text="@string/title_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:background="@drawable/textview_border"
            android:padding="6dp"
            android:textSize="17dp"
            android:layout_marginBottom="10dp"/>
        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/game_help_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="15dp"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:text="@string/game_help_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="15dp"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:text="@string/game_help_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </ScrollView>
        <TextView
            android:text="@string/title_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:background="@drawable/textview_border"
            android:padding="6dp"
            android:textSize="17dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:text="@string/chat_help_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginBottom="0dp"/>
        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp" />
    </LinearLayout>