<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <TextView
        android:textSize="18dp"
        android:text="@string/please_enter_the_word_and_hint_for_pepper_to_start_the_game"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/hint"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/hint_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/word"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/word_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/sendBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send"/>
    
</LinearLayout>