<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dark_green_top_gradient"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp"
        android:weightSum="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/authorized_pepper_list"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/authorized_pepper_list"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:layout_weight="1.5"
            android:background="@color/white"
            android:choiceMode="singleChoice"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/requested_pepper_list"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/requested_pepper_list"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:layout_weight="1.5"
            android:choiceMode="singleChoice"
            android:textSize="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/add_pepper" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>